--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 title: "ST 558 Blog"
 author: "Simon Weisenhorn"
-description: "Some short description of your blog can go here." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "A Data Science Blog" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-#email: "example@mail.com"
+email: "spweisen@ncsu.edu"
 #twitter_username: "twitteruser"
 #github_username: "githubuser"
 #linkedin_username: "linkedinuser"
